Amelioration du formulaire de la reservation

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDScYkZVXEttgDmYjC7kHCcWdmu8kp6Q08&callback=initMap"
   	type="text/javascript"></script>
 
-	<script src="map.js"></script>
-
+	
 <!-- Seulement si j'ultilise la classe ES6!en modifiant mon map.js par map2.js Et, enlever le "&callback=initMap" 
 	<script>
-		window.addEventListener('load', () => {const velovMap = new Map()});
+		//window.addEventListener('load', () => {const velovMap = new Map()});
+		//window.addEventListener('load', () => {const marker = new Markers()});
 	</script>-->
-
+	<script src="map.js"></script>
 	<script src="canvas.js"></script>
 	<script src="countDown.js"></script>
 </body>
