--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			<footer  class="row justify-content-center">
 				<div class="col-lg-12" id="piedPage">
 					<h1 class="col-lg-12 col-xs-12"><strong>La ville de Lyon vous informe que le port du casque à vélo est fortement recommandé en ville</strong></h1>
-					
 				</div>
+				<div class="col-lg-12" id="piedPage2"></div>
 			</footer>
 		</div>
 	</div>
