realisation classe es6 map.js

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
 <!-- Scripts pour la carte avec les clusters de marqueurs -->	
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDScYkZVXEttgDmYjC7kHCcWdmu8kp6Q08&callback=initMap"
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDScYkZVXEttgDmYjC7kHCcWdmu8kp6Q08"
   	type="text/javascript"></script>
 
-	<script src="map.js"></script>
+	<script src="map2.js"></script>
 
-<!-- Seulement si j'ultilise la classe ES6!en modifiant mon map.js par map2.js Et, enlever le "&callback=initMap" 
+<!-- Seulement si j'ultilise la classe ES6!en modifiant mon map.js par map2.js Et, enlever le "&callback=initMap" -->
 	<script>
 		window.addEventListener('load', () => {const velovMap = new Map()});
-	</script>-->
+	</script>
 
 	<script src="canvas.js"></script>
 	<script src="countDown.js"></script>
