--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:description" content="Location de vélos dans la ville de Lyon" />
 		<meta property="og:type" content="website" />
 <!--AFFICHE LA PETITE ICONE SUR TOUS LES NAVIAGTEURS DONT IE -->
-		<link rel="shortcut icon" type="image/x-icon" href="photos/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="Photos/favicon.ico" />
 		<link rel="icon" type="image/png" href="photos/favicon.ico" />
 <!-- BOOTSTRAP & FONTS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
