--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 <!-- PIED DE PAGE -->		
 			<div class="container" id="footer">
 				<footer  class="row justify-content-center">
-					<div class="col-lg-12" id="piedPage">
-						<h1 class="col-lg-12 col-xs-12"><strong>La ville de Lyon vous informe que le port du casque à vélo est fortement recommandé en ville</strong></h1>
-					</div>
+					<div class="col-lg-12" id="piedPage"></div>
 				</footer>
 			</div>
 		</div>
