mise au propre pour la soutenance

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Location vélos</title>
-		<meta name="description" content="Location de vélos"/>
+		<meta name="description" content="Location de vélos">
 <!--POUR LA VUE SUR LES SMARTPHONES, LA LARGEUR DE L'ECRAN=LARGEUR ECRAN | L'UTILISATEUR NE PEUT PAS ZOOMER SUR L'ECRAN -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <!-- PROTOCOLE OPEN GRAPH POUR ETRE VU DES RESEAUX SOCIAUX(FB, ETC) --> 
-		<meta property="og:title" content="Vélo'v : location de vélos à Lyon" />
-		<meta property="og:description" content="Location de vélos dans la ville de Lyon" />
-		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Vélo'v : location de vélos à Lyon" >
+		<meta property="og:description" content="Location de vélos dans la ville de Lyon" >
+		<meta property="og:type" content="website" >
 <!--AFFICHE LA PETITE ICONE SUR TOUS LES NAVIAGTEURS DONT IE -->
-		<link rel="shortcut icon" type="image/x-icon" href="Photos/favicon.ico" />
-		<link rel="icon" type="image/png" href="photos/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="Photos/favicon.ico" >
+		<link rel="icon" type="image/png" href="photos/favicon.ico" >
 <!-- BOOTSTRAP & FONTS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,900">
 <!-- CSS  -->
-		<link rel="stylesheet" href="./style.css" /> 
+		<link rel="stylesheet" href="./style.css" > 
 	</head>
 	<body>
 		<div class="container-fluid">	
@@ -64,12 +64,12 @@
 <!-- SCRIPTS JS -->
 		<script async defer src="https://api.jcdecaux.com/vls/v1/stations?contract=Lyon&apiKey=4fd36bf901d835d9bf90b74a5a41c9e4a52e8451"></script>
 <!-- CDN jQuery first, then Popper.js, then Bootstrap JS -->	
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+		<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+		<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>-->
 <!-- Scripts extérieurs -->
 		<script src="slider.js"></script>		
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDScYkZVXEttgDmYjC7kHCcWdmu8kp6Q08" type="text/javascript"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDScYkZVXEttgDmYjC7kHCcWdmu8kp6Q08"></script>
 		<script src="map2.js"></script>
 		<script src="canvas3.js"></script>
 		<script>
